[package]
authors = ["Bruce Du <bingxuan_du@126.com>"]
name = "wrench"
version = "0.0.1"
edition = "2021"
description = "Wrench is a cli tool that implements `touch` by Rust and supports Windows."
license = "MIT/Apache-2.0"
homepage = "https://github.com/BruceDu521/wrench"
repository = "https://github.com/BruceDu521/wrench.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
chrono = "0.4"
