[package]
authors = ["Bruce Du <bingxuan_du@126.com>"]
name = "wrouch"
version = "0.1.1"
edition = "2021"
description = "Wrouch is a cli tool that implements `touch` by Rust and supports Windows."
license = "MIT/Apache-2.0"
homepage = "https://github.com/BruceDu521/wrouch"
repository = "https://github.com/BruceDu521/wrouch.git"
readme = "README.md"
keywords = ["utility", "cli", "touch", "windows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
chrono = "0.4"
